--- a/styles.css
+++ b/styles.css
@@ -35,17 +35,30 @@ nav a, nav a:link, nav a:visited {
   background-color: #80FED0;
   margin-left: 15px;
   margin-right: 15px;
-  padding: 5px 10px;
+  padding: 15px 10px;
+  font-weight: normal;
   /* width: 1000px; */
 }
 
+.photo-section {
+  margin-left: 15px;
+}
+
+.photo-count a {
+  text-decoration: none;
+  border-bottom: solid yellow;
+  color: black;
+  font-weight: bold;
+}
 
 .photo-item {
   display: inline-block;
-  margin-left: 15px;
-  margin-right: 15px;
-  width: 30%;
+  /* margin-left: 15px; */
+  /* margin-right: 15px; */
+  padding-left: 0px;
+  /* width: 30%; */
 }
+
 .photo-item p {
   background-color: #FFD800;
   text-align: center;
@@ -54,12 +67,6 @@ nav a, nav a:link, nav a:visited {
   margin-top: 0;
   margin-bottom: 10px;
   /* width: 30% */
-}
-
-h2 a {
-  text-decoration: none;
-  border-bottom: solid yellow;
-  font-weight: bold;
 }
 
 footer {
